force-app/main/default/objects/PostalCodeList__c/PostalCodeList__c.object-meta.xml
<CustomObject>
    <description>PostalCodeList for all OpCo&apos;s with unique postal codes</description>
    <label>PostalCodeList</label>
    <nameField>
        <displayFormat>Postalcode - {00000}</displayFormat>
        <label>PostalCodeList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PostalCodeLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>