force-app/main/default/objects/PostalCodeList__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field will be used for concatenate field: &apos;Postal Code - City Name&apos;.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>