force-app/main/default/objects/PostalCodeList__c/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plantyn</fullName>
            </value>
            <value>
                <fullName>Noordhoff</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
            <value>
                <fullName>Noordhoff Zorg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>