force-app/main/default/objects/PostalCodeList__c/fields/Postal_Code_with_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_with_City_Name__c</fullName>
    <formula>PostalCode__c &amp; &quot; - &quot;&amp; City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code with City Name</label>
    <type>Text</type>
</CustomField>